fix(PrizePool): remove fit-content width causing mobile layout issue (#7780)
lose fit-content

--- a/stylesheets/commons/Prizepooltable.scss
+++ b/stylesheets/commons/Prizepooltable.scss
@@ -467,7 +467,6 @@ share the `prizepooltable` class.
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
-	width: fit-content;
 
 	.switch-pill-container {
 		align-self: flex-start;
